fix link colors and make warnings more readable.

--- a/.vuepress/theme/styles/custom-blocks.styl
+++ b/.vuepress/theme/styles/custom-blocks.styl
@@ -13,19 +13,19 @@
   &.warning
     background-color $warningBgColor
     border-color darken($warningBorderColor, 5%)
-    color darken($warningBorderColor, 20%)
+    //color darken($warningBorderColor, 20%)
     .custom-block-title
       color darken($warningBorderColor, 5%)
     a
-      color $textColor
+      color $accentColor
   &.danger
     background-color $dangerBgColor
     border-color darken($dangerBorderColor, 5%)
-    color darken($dangerBorderColor, 20%)
+    //color darken($dangerBorderColor, 20%)
     .custom-block-title
       color darken($dangerBorderColor, 5%)
     a
-      color $textColor
+      color $accentColor
   &.details
     display block
     position relative
